# yaron

./: .gitignore  CMakeLists.txt  conanfile.txt  config.doxygen
apps/: chaos_fractal.cpp  flower_seeds.cpp  imusic.cpp  mandelbrot.cpp  shaders.cpp  voxels.cpp
include/: app.hpp  camera.hpp  color.hpp  complex.hpp  context.hpp  controls.hpp  fwd.hpp  geometry.hpp  geometry.inl  input.hpp  light.hpp  math.hpp  object.hpp  primitives.hpp  random.hpp  shader.hpp  text.hpp  transform.hpp  utils.hpp  vertex.hpp
include/graphics/: context.hpp  fwd.hpp  geometry.hpp  geometry.inl  primitives.hpp  shader.hpp  text.hpp  vertex.hpp
resources/: light.fragmentshader  light.vertexshader  normal.fragmentshader  simple.fragmentshader  simple.vertexshader
resources/shaders/: bookofshaders.fragmentshader  light.fragmentshader  light.vertexshader  normal.vertexshader  simple.fragmentshader  text.fragmentshader  text.vertexshader
source/: app.cpp  camera.cpp  color.cpp  complex.cpp  context.cpp  controls.cpp  geometry.cpp  input.cpp  light.cpp  main.cpp  object.cpp  primitives.cpp  random.cpp  shader.cpp  text.cpp  transform.cpp  vertex.cpp
source/graphics/: context.cpp  geometry.cpp  primitives.cpp  shader.cpp  text.cpp  vertex.cpp
